<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities_assessment.AssessmentViewerActivity">
    <item
        android:id="@+id/action_delete_assessment"
        android:orderInCategory="100"
        android:title="@string/delete_assessment"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_enable_notifications"
        android:orderInCategory="101"
        android:title="@string/enable_notifications"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_disable_notifications"
        android:orderInCategory="102"
        android:title="@string/disable_notifications"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit_assessment"
        android:orderInCategory="103"
        android:title="@string/edit_assessment"
        app:showAsAction="never"/>
</menu>