<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/horizontal_margin"
    android:paddingTop="@dimen/vertical_margin"
    android:paddingRight="@dimen/horizontal_margin"
    android:paddingBottom="@dimen/vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.danielrichardson.a2kewl4skewl.activities_course.CourseEditorActivity"
    tools:showIn="@layout/activity_course_editor">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true">


        <TextView
            android:id="@+id/tvCourseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:text="@string/course_name" />

        <EditText
            android:id="@+id/courseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="8dp"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/tvCourseStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:text="@string/course_start" />

        <EditText
            android:id="@+id/courseStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="8dp"
            android:inputType="date" />

        <TextView
            android:id="@+id/tvCourseEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:text="@string/course_end" />

        <EditText
            android:id="@+id/courseEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_margin="8dp"
            android:inputType="date" />

        <TextView
            android:id="@+id/tvCourseMentor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:text="@string/course_mentor" />

        <EditText
            android:id="@+id/courseMentor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_margin="8dp"
            android:inputType="text" />

        <TextView
            android:id="@+id/tvCourseMentorPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:text="@string/course_mentor_phone" />

        <EditText
            android:id="@+id/courseMentorPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_margin="8dp"
            android:inputType="phone" />

        <TextView
            android:id="@+id/tvCourseMentorEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:text="@string/course_mentor_email" />

        <EditText
            android:id="@+id/courseMentorEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_margin="8dp"
            android:inputType="textWebEmailAddress" />

    </GridLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gridLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:onClick="saveCourseChanges"
        android:text="@string/save_course" />


</RelativeLayout>