<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/horizontal_margin"
    android:paddingTop="@dimen/vertical_margin"
    android:paddingRight="@dimen/horizontal_margin"
    android:paddingBottom="@dimen/vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="180dp"
            android:layout_height="168dp"
            android:layout_row="0"
            android:layout_column="0"
            android:contentDescription="@string/view_degree_plan"
            android:elevation="@dimen/default_elevation"
            android:onClick="openDegreePlan"
            android:padding="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_school" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:text="@string/current_term"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="180dp"
            android:layout_height="168dp"
            android:layout_row="0"
            android:layout_column="1"
            android:elevation="@dimen/default_elevation"
            android:onClick="openCurrentTerm"
            android:padding="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_lead_pencil" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal|center_horizontal"
            android:layout_marginLeft="10dp"
            android:text="@string/view_degree_plan"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="180dp"
            android:layout_height="168dp"
            android:layout_row="2"
            android:layout_column="0"
            android:contentDescription="@string/view_degree_plan"
            android:elevation="@dimen/default_elevation"
            android:onClick="openCurrentCourses"
            android:padding="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_book_open_page_variant" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal|center_horizontal"
            android:layout_marginLeft="10dp"
            android:text="@string/view_courses"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="180dp"
            android:layout_height="168dp"
            android:layout_row="2"
            android:layout_column="1"
            android:contentDescription="@string/view_degree_plan"
            android:elevation="@dimen/default_elevation"
            android:onClick="openCurrentAssessments"
            android:padding="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_chair_school" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|center_horizontal"
            android:layout_marginLeft="10dp"
            android:text="@string/view_assessments"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </GridLayout>
</LinearLayout>