<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/horizontal_margin"
    android:paddingTop="@dimen/vertical_margin"
    android:paddingRight="@dimen/horizontal_margin"
    android:paddingBottom="@dimen/vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.danielrichardson.a2kewl4skewl.activities_term.TermViewerActivity"
    tools:showIn="@layout/activity_term_viewer">

    <TextView
        android:id="@+id/tvTermViewTermTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignParentTop="true"
        android:text="Dummy Term Name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/text_size_large" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTermViewTermTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="2dp"
        android:text="@string/start_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="2dp"
        android:text="@string/end_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvTermViewStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTermViewTermTitle"
        android:layout_margin="2dp"
        android:layout_toEndOf="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:text="2018-01-01"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvTermViewEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_margin="2dp"
        android:layout_toEndOf="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:text="2018-06-30"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_marginTop="44dp">


        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="107dp"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="0"
            android:onClick="openCourseListActivity"
            android:elevation="@dimen/default_elevation"
            android:src="@drawable/ic_book_open_page_variant" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginLeft="8dp"
            android:onClick="openCourseListActivity"
            android:text="@string/courses"
            android:textSize="16sp" />
    </GridLayout>

</RelativeLayout>